--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.0",
+    "gatsby-remark-images": "^3.4.1",
+    "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-source-filesystem": "^2.4.0",
+    "gatsby-transformer-remark": "^2.9.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "@types/react-helmet": "^6.1.0",
+    "gatsby-plugin-postcss": "^3.0.3",
+    "postcss": "^8.1.4",
+    "prettier": "2.1.2",
+    "tailwindcss": "^1.9.6"
   },
   "keywords": [
     "gatsby"
