--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
-    "tinyqueue": "^2.0.3"
+    "tinyqueue": "^2.0.3",
+    "vis-network": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
