--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "mrkhosravian-ir",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Mohammad Reza Khosravian's personal website.",
+  "version": "1.0.0",
+  "author": "Mohammad Reza Khosravian <jomanjo80@gmail.com>",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "cypress": "^6.2.1",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.26.1",
-    "gatsby-image": "^2.5.0",
-    "gatsby-plugin-google-analytics": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-remark-images": "^3.8.0",
-    "gatsby-remark-prismjs": "^3.10.0",
-    "gatsby-source-filesystem": "^2.5.0",
-    "gatsby-transformer-remark": "^2.13.0",
-    "gatsby-transformer-sharp": "^2.6.0",
+    "dotenv": "^9.0.2",
+    "gatsby": "^3.5.0",
+    "gatsby-image": "^3.5.0",
+    "gatsby-plugin-google-analytics": "^3.5.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-remark-images": "^5.2.0",
+    "gatsby-remark-prismjs": "^5.2.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-remark": "^4.2.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.20",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "tinyqueue": "^2.0.3",
@@ -32,9 +33,9 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
-    "gatsby-plugin-postcss": "^3.4.0",
+    "gatsby-plugin-postcss": "^4.5.0",
     "postcss": "^8.2.1",
-    "prettier": "2.2.1",
+    "prettier": "^2.3.0",
     "tailwindcss": "^2.0.2"
   },
   "keywords": [
@@ -57,5 +58,10 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2"
   }
 }
