--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vis-network": "^9.0.5"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^1.0.3",
     "@types/react-helmet": "^6.1.2",
     "gatsby-plugin-postcss": "^4.10.0",
     "postcss": "^8.3.6",
