Convert remark to mdx

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "1.0.0",
   "author": "Mohammad Reza Khosravian <jomanjo80@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "axios": "^0.21.1",
     "cypress": "^8.1.0",
     "dotenv": "^10.0.0",
@@ -13,13 +15,13 @@
     "gatsby-plugin-google-analytics": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-mdx": "^2.10.1",
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-remark-images": "^5.7.0",
     "gatsby-remark-prismjs": "^5.7.0",
     "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-remark": "^4.7.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "lodash": "^4.17.21",
     "prismjs": "^1.24.1",
