--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-images": "^6.0.0",
     "gatsby-remark-prismjs": "^6.0.0",
     "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-source-wordpress": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "lodash": "^4.17.21",
     "prismjs": "^1.25.0",
