--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
     "@types/react": "17.0.32",
     "autoprefixer": "^10.3.7",
-    "eslint": "8.1.0",
+    "eslint": "^8.1.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
