--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "@types/moment-jalaali": "^0.7.5",
+    "classnames": "^2.3.1",
+    "moment-jalaali": "^0.9.2",
+    "next": "^12.0.0",
+    "next-i18next": "^8.9.0",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.29.2"
@@ -17,10 +22,11 @@
   "devDependencies": {
     "@types/react": "17.0.32",
     "autoprefixer": "^10.3.7",
-    "eslint": "^8.1.0",
+    "eslint": "<8.0.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
+    "tailwindcss-rtl": "^0.7.3",
     "typescript": "4.4.4"
   }
 }
