--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/moment-jalaali": "^0.7.5",
     "classnames": "^2.3.1",
+    "gray-matter": "^4.0.3",
     "moment-jalaali": "^0.9.2",
-    "next": "^12.0.0",
+    "next": "^12.0.2",
     "next-i18next": "^8.9.0",
+    "next-mdx-remote": "^3.0.7",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.29.2"
   },
   "devDependencies": {
+    "@types/moment-jalaali": "^0.7.5",
     "@types/react": "17.0.32",
     "autoprefixer": "^10.3.7",
     "eslint": "<8.0.0",
