--- a/package.json
+++ b/package.json
@@ -7,29 +7,35 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.0",
     "axios": "^0.23.0",
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.1.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-google-analytics": "^4.0.0",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-mdx": "^3.1.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-react-i18next": "^1.2.2",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-images": "^6.0.0",
     "gatsby-remark-prismjs": "^6.0.0",
     "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-source-wordpress": "^6.0.0",
+    "gatsby-source-wordpress": "^6.1.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "i18next": "^21.4.0",
     "lodash": "^4.17.21",
     "prismjs": "^1.25.0",
-    "prop-types": "^15.7.2",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.13.0",
     "react-icons": "^4.3.1",
     "tinyqueue": "^2.0.3",
     "vis-network": "^9.1.0"
@@ -37,10 +43,10 @@
   "devDependencies": {
     "@netlify/plugin-gatsby": "^1.0.3",
     "@types/react-helmet": "^6.1.4",
+    "fs-extra": "^10.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.19"
   },
   "keywords": [
     "gatsby"
@@ -49,12 +55,9 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "CURRENT_DOMAIN=http://localhost:8000 gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "cypress:open": "cypress open"
+    "clean": "gatsby clean"
   },
   "repository": {
     "type": "git",
