--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:watch": "next-remote-watch ./data",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -31,6 +32,7 @@
     "autoprefixer": "^10.3.7",
     "eslint": "<8.0.0",
     "eslint-config-next": "11.1.2",
+    "next-remote-watch": "^1.0.0",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17",
     "tailwindcss-rtl": "^0.7.3",
