--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/react": "^1.6.22",
+    "@mapbox/rehype-prism": "^0.8.0",
     "classnames": "^2.3.1",
     "gray-matter": "^4.0.3",
-    "moment-jalaali": "^0.9.2",
-    "next": "^12.0.2",
+    "moment-jalaali": "^0.9.6",
+    "next": "^12.1.6",
     "next-i18next": "^8.9.0",
-    "next-mdx-remote": "^3.0.7",
-    "next-themes": "^0.0.15",
-    "prism-react-renderer": "^1.2.1",
-    "prismjs": "^1.25.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sharp": "^0.29.2"
+    "next-mdx-remote": "^4.0.3",
+    "next-themes": "^0.2.0",
+    "prism-react-renderer": "^1.3.1",
+    "prismjs": "^1.28.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "remark-gfm": "^3.0.1",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
-    "@types/mdx-js__react": "^1.5.5",
     "@types/moment-jalaali": "^0.7.5",
-    "@types/prismjs": "^1.16.6",
-    "@types/react": "17.0.32",
-    "autoprefixer": "^10.3.7",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "11.1.2",
+    "@types/node": "^17.0.31",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.8",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.6",
     "next-remote-watch": "^1.0.0",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.17",
-    "tailwindcss-rtl": "^0.7.3",
-    "typescript": "4.4.4"
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "tailwindcss-rtl": "^0.9.0",
+    "typescript": "^4.6.4"
   }
 }
