--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment-jalaali": "^0.9.6",
     "next": "^12.1.6",
     "next-i18next": "^8.9.0",
+    "next-image-zoom": "^1.1.7",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
     "prism-react-renderer": "^1.3.1",
